[package]
name = "mini-lsm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["derive"] }
crossbeam-channel = "0.5.14"
crossbeam-skiplist = "0.1.3"
moka = { version = "0.12.10", features = ["sync"] }
ouroboros = "0.18.5"
shlex = "1.3.0"
tempfile = "3.19.1"
